# notify_lark

./: .env.example  AGENTS.md  Cargo.toml  LICENSE  README.md  agent-rules.md
.opencode/plugin/: notify-lark.ts
.opencode/plugins/: notify-lark.ts
.opencode/skills/notify-lark/: SKILL.md
src/: config.rs  lark.rs  main.rs
